# audiohal

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: sine.rs
portaudio-sys/: Cargo.toml  build.rs
portaudio-sys/src/: bindings.rs  lib.rs
src/: backend.rs  error.rs  lib.rs  stream_options.rs
src/portaudio/: device.rs  error.rs  host.rs  mod.rs  stream.rs  stream_options.rs
src/portaudio/device/: internal.rs
src/portaudio/internal/: device.rs  stream.rs
